--- a/index.html
+++ b/index.html
@@ -35,24 +35,33 @@
                     <li>Отзывы</li>
                     <li><img src="./img/icons8-shopping_bag 1.svg" alt=""></li>
                     <li>
-                        <input type="checkbox" class="d-none" id="bars" >
+                        <input type="checkbox" class="d-none" id="bars">
                         <label for="bars">
                             <i class="fas fa-bars d-none1"></i>
-                            <i class="fa-x d-none"></i>
                         </label>
                         <div class="burger_menu">
-                            <ul class="kategoriya_list">
-                                <li>Латексные шары</li>
-                                <li>Фольгированые шары</li>
-                                <li>Цифры</li>
-                                <li>3D Сферы</li>
-                                <li>Хромовые шары</li>
-                            </ul>
+                            <div class="burger_top d-none">
+                                <div class="burger_head">
+                                    <div class="logo d-none">
+                                        <img src="./img/калибри 1.png" alt="">
+                                    </div>
+                                    <label for="bars"><i class="fa-solid fa-x d-none"></i></label>
+                                </div>
+                                <ul class="kategoriya_list">
+                                    <li>Латексные шары</li>
+                                    <li>Фольгированые шары</li>
+                                    <li>Цифры</li>
+                                    <li>3D Сферы</li>
+                                    <li>Хромовые шары</li>
+                                </ul>
+                            </div>
                             <div class="contact">
                                 <div class="div">
-                                    <div class="num"><i class="fas fa-chevron-down"></i> <span>+7 861 204 24 46</span></div>
+                                    <div class="num"><i class="fas fa-chevron-down"></i> <span>+7 861 204 24 46</span>
+                                    </div>
                                     <div class="link"><i class="fab fa-instagram"></i>
-                                        <i class="fab fa-whatsapp"></i></div>
+                                        <i class="fab fa-whatsapp"></i>
+                                    </div>
                                 </div>
                                 <div class="time">
                                     <span>Режим работы</span>
