--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <img src="./img/Frame 1.png" alt="">
                     </div>
                     <div class="searchbar">
-                        <input type="text" id="searchbar">
+                        <input type="text" required id="searchbar">
                         <label for="searchbar"><img src="./img/icons8-search 1.svg" alt="">Поиск</label>
                     </div>
                 </div>
